--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<style>body{background-color:black;}</style>
+<style>body{background-color:red;}</style>
 
 <h1 align="left" style="color: antiquewhite;">Hello 👋, My name is Khushaalan Arjunan</h1>
 <h3 align="left" style="color: antiquewhite;">Second Year Computer Science Student here in one of the local universities in Malaysia. </h3>
